bumped java and dependencies