@@ -9,10 +9,10 @@
   <version>1.0-SNAPSHOT</version>
 
   <properties>
-    <java.version>20</java.version>
-    <junit-jupiter.version>5.9.3</junit-jupiter.version>
+    <java.version>21</java.version>
+    <junit-jupiter.version>5.10.0</junit-jupiter.version>
     <annotations.version>24.0.1</annotations.version>
-    <slf4j.version>2.0.7</slf4j.version>
+    <slf4j.version>2.0.9</slf4j.version>
     <assertj.version>3.24.2</assertj.version>
   </properties>
 
@@ -30,7 +30,7 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.18.26</version>
+      <version>1.18.30</version>
     </dependency>
 
     <dependency>
@@ -62,7 +62,6 @@
           <source>${java.version}</source>
           <target>${java.version}</target>
           <compilerArgs>
-            <arg>--add-modules=jdk.incubator.concurrent</arg>
             <arg>--enable-preview</arg>
           </compilerArgs>
         </configuration>
@@ -71,9 +70,9 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.1.0</version>
+        <version>3.1.2</version>
         <configuration>
-          <argLine>--enable-preview --add-modules=jdk.incubator.concurrent</argLine>
+          <argLine>--enable-preview</argLine>
         </configuration>
       </plugin>
     </plugins>
